--- a/app/views/backoffice/categories/index.html.erb
+++ b/app/views/backoffice/categories/index.html.erb
@@ -4,6 +4,9 @@
     <div class="row">
       <div class="col-lg-12">
         <h1 class="page-header">Categorias</h1>
+        <div class="alert alert-success">
+          <a href="#" class="alert-link"> <%= notice %> </a>.
+        </div>
       </div>
       <!-- /.col-lg-12 -->
     </div>
@@ -11,6 +14,11 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <!--Categorias-->
+
+          <%= link_to new_backoffice_category_path, class: 'btn btn-success btn-circle pull-right' do %>
+              <i class="fa fa-link"></i>
+          <% end %>
+
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
@@ -31,10 +39,12 @@
                   <td> <%= category.id %> </td>
                   <td> <%= category.description %> </td>
                   <td style='width: 15%'>
-                    <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-list"></i>
-                    </button>
 
-                    <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-list"></i>
+                    <%=link_to edit_backoffice_category_path(category), class: 'btn btn-primary btn-circle' do %>
+                        <i class="fa fa-list"></i>
+                    <% end %>
+
+                    <button type="button" disabled = 'disabled' class="btn btn-primary btn-circle"><i class="fa fa-list"></i>
                     </button>
 
                   </td>
