--- a/app/views/backoffice/categories/new.html.erb
+++ b/app/views/backoffice/categories/new.html.erb
@@ -10,23 +10,26 @@
     <div class="col-lg-13">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <!--Categorias-->
+          Nova Categoria
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered table-hover">
-              <thead>
-              <tr>
-                <th>#</th>
-                <th>Descrição</th>
-                <th style='width: 20%' ></th>
-              </tr>
-              </thead>
-              <tbody>
-              </tbody>
-            </table>
-          </div>
+
+          <%= form_for([:backoffice, @category]) do |f|%>
+
+              <div class="form-group">
+
+                <label>Text Input with Placeholder</label>
+                <%= f.text_field :description, class: 'form-control', placeholder: 'Enter text'  %>
+
+                <button type="submit" class="btn btn-default pull-center">Submit Button</button>
+
+
+              </div>
+
+
+          <% end %>
+
           <!-- /.table-responsive -->
         </div>
         <!-- /.panel-body -->
